--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 eframe = "0.31.1"
 egui = "0.31.1"
+lazy_static = "1.5.0"
+num-traits = "0.2.19"
+regex = "1.11.1"
+rustyline = "16.0.0"
