--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cpal = "0.16.0"
 eframe = "0.31.1"
 egui = "0.31.1"
 lazy_static = "1.5.0"
 num-traits = "0.2.19"
 regex = "1.11.1"
 rustyline = "16.0.0"
+serialport = "4.7.2"
