--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "2.0.1"
 cpal = "0.16.0"
+egui = "0.32.3"
 hex = "0.4.3"
 lazy_static = "1.5.0"
 num-traits = "0.2.19"
 regex = "1.11.1"
 rustyline = "16.0.0"
+rvdc = "0.1.1"
+serde = "1.0.219"
 serialport = "4.7.2"
